changes a day error in the workout chart. Fixed an alignment issue in the mobile navigation

--- a/resources/assets/sass/dashboard.scss
+++ b/resources/assets/sass/dashboard.scss
@@ -248,6 +248,10 @@
   font-size: 3.4rem !important;
 }
 
+.nav.nav-mobile-menu li a {
+  line-height: 3rem;
+}
+
 /* Scrollfix */
 .ct-chart svg{
     position: relative;
